write initial html and add css

--- a/index.html
+++ b/index.html
@@ -11,15 +11,34 @@
 </head>
 <body>
 
-  Image caption 1
+  <main>
 
-  Image caption two
+    <figure>
+      <img src="images/placeholder-3by1.svg" alt="" />
+      <figcaption>Image caption 1</figcaption>
+    </figure>
 
-  Caption for image three is longer
+    <figure>
+      <img src="images/placeholder-1by1.svg" alt="" />
+      <figcaption>Image caption two</figcaption>
+    </figure>
 
-  Image caption 4
+    <figure>
+      <img src="images/placeholder-3by2.svg" alt="" />
+      <figcaption>Caption for image three is longer</figcaption>
+    </figure>
 
-  Image caption V
+    <figure>
+      <img src="images/placeholder-3by2.svg" alt="" />
+      <figcaption>Image caption 4</figcaption>
+    </figure>
+
+    <figure>
+      <img src="images/placeholder-3by2.svg" alt="" />
+      <figcaption>Image caption V</figcaption>
+    </figure>
+
+  </main>
 
 </body>
 </html>
