add grid and modular tags

--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
 </head>
 <body>
 
-  <main>
+  <div class="grid">
 
-    <figure>
-      <img src="images/placeholder-3by1.svg" alt="" />
-      <figcaption>Image caption 1</figcaption>
+    <figure class="embed embed-3by1 push-none unit xs-1">
+      <img class="embed-item" src="images/placeholder-3by1.svg" alt="">
+      <figcaption class="embed-item pin-bl">Image caption 1</figcaption>
     </figure>
 
-    <figure>
-      <img src="images/placeholder-1by1.svg" alt="" />
-      <figcaption>Image caption two</figcaption>
+    <figure class="embed embed-1by1 push-none unit xs-1">
+      <img class="embed-item" src="images/placeholder-1by1.svg" alt="">
+      <figcaption class="embed-item pin-bl">Image caption two</figcaption>
     </figure>
 
-    <figure>
-      <img src="images/placeholder-3by2.svg" alt="" />
-      <figcaption>Caption for image three is longer</figcaption>
+    <figure class="embed embed-3by2 push-none unit xs-1-2">
+      <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
+      <figcaption class="embed-item">Caption for image three is longer</figcaption>
     </figure>
 
-    <figure>
-      <img src="images/placeholder-3by2.svg" alt="" />
-      <figcaption>Image caption 4</figcaption>
+    <figure class="embed embed-3by2 push-none unit xs-1-2">
+      <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
+      <figcaption class="embed-item">Image caption 4</figcaption>
     </figure>
 
-    <figure>
-      <img src="images/placeholder-3by2.svg" alt="" />
-      <figcaption>Image caption V</figcaption>
+    <figure class="embed embed-3by2 push-none unit xs-1">
+      <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
+      <figcaption class="embed-item">Image caption V</figcaption>
     </figure>
 
-  </main>
+  </div>
 
 </body>
 </html>
