--- a/index.html
+++ b/index.html
@@ -13,30 +13,50 @@
 
   <div class="grid">
 
-    <figure class="embed embed-3by1 push-none unit xs-1">
-      <img class="embed-item" src="images/placeholder-3by1.svg" alt="">
-      <figcaption class="embed-item pin-bl">Image caption 1</figcaption>
-    </figure>
+    <div class="unit xs-1 m-3-4">
+      <figure class="relative push-none">
+        <div class="embed embed-3by1">
+          <img class="embed-item" src="images/placeholder-3by1.svg" alt="">
+        </div>
+        <figcaption class="absolute pin-bc w-1 pad-t-1-2 pad-b-1-2 gutter push">Image caption 1</figcaption>
+      </figure>
+    </div>
 
-    <figure class="embed embed-1by1 push-none unit xs-1">
-      <img class="embed-item" src="images/placeholder-1by1.svg" alt="">
-      <figcaption class="embed-item pin-bl">Image caption two</figcaption>
-    </figure>
+    <div class="unit xs-1 m-1-4">
+      <figure class="relative push-none">
+        <div class="embed embed-1by1">
+          <img class="embed-item" src="images/placeholder-1by1.svg" alt="">
+        </div>
+        <figcaption class="absolute embed-item pin-bl">Image caption two</figcaption>
+      </figure>
+    </div>
 
-    <figure class="embed embed-3by2 push-none unit xs-1-2">
-      <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
-      <figcaption class="embed-item">Caption for image three is longer</figcaption>
-    </figure>
+    <div class="unit xs-1-2 m-1-3">
+      <figure class="relative push-none">
+        <div class="embed embed-3by2">
+          <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
+        </div>
+        <figcaption class="absolute embed-item">Caption for image three is longer</figcaption>
+      </figure>
+    </div>
 
-    <figure class="embed embed-3by2 push-none unit xs-1-2">
-      <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
-      <figcaption class="embed-item">Image caption 4</figcaption>
-    </figure>
+    <div class="unit xs-1-2 m-1-3">
+      <figure class="relative push-none">
+        <div class="embed embed-3by2">
+          <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
+        </div>
+        <figcaption class="absolute embed-item">Image caption 4</figcaption>
+      </figure>
+    </div>
 
-    <figure class="embed embed-3by2 push-none unit xs-1">
-      <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
-      <figcaption class="embed-item">Image caption V</figcaption>
-    </figure>
+    <div class="unit xs-1 m-1-3">
+      <figure class="relative push-none">
+        <div class="embed embed-3by2">
+          <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
+        </div>
+        <figcaption class="absolute embed-item">Image caption V</figcaption>
+      </figure>
+    </div>
 
   </div>
 
