add correct sizing to other figures

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="embed embed-1by1">
           <img class="embed-item" src="images/placeholder-1by1.svg" alt="">
         </div>
-        <figcaption class="absolute embed-item pin-bl">Image caption two</figcaption>
+        <figcaption class="absolute pin-bc w-1 pad-t-1-2 pad-b-1-2 gutter push">Image caption two</figcaption>
       </figure>
     </div>
 
@@ -36,7 +36,7 @@
         <div class="embed embed-3by2">
           <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
         </div>
-        <figcaption class="absolute embed-item">Caption for image three is longer</figcaption>
+        <figcaption class="absolute pin-bc w-1 pad-t-1-2 pad-b-1-2 gutter push">Caption for image three is longer</figcaption>
       </figure>
     </div>
 
@@ -45,7 +45,7 @@
         <div class="embed embed-3by2">
           <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
         </div>
-        <figcaption class="absolute embed-item">Image caption 4</figcaption>
+        <figcaption class="absolute pin-bc w-1 pad-t-1-2 pad-b-1-2 gutter push">Image caption 4</figcaption>
       </figure>
     </div>
 
@@ -54,7 +54,7 @@
         <div class="embed embed-3by2">
           <img class="embed-item" src="images/placeholder-3by2.svg" alt="">
         </div>
-        <figcaption class="absolute embed-item">Image caption V</figcaption>
+        <figcaption class="absolute pin-bc w-1 pad-t-1-2 pad-b-1-2 gutter push">Image caption V</figcaption>
       </figure>
     </div>
 
